[shop-server] 在[cloud-iaas/eureka-server]搭建eureka-server，并添加springsecurity进行安全认证

--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -3,10 +3,109 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <modules>
+        <module>cloud-iaas</module>
+    </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.9.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+    <packaging>pom</packaging>
     <groupId>com.gohb</groupId>
     <artifactId>shopServer</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <!-- 版本控制 依赖管理 公共的依赖可以放在最外面这个父项目里面 -->
+    <!-- 版本控制 jdk1.8  -->
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+        <spring-boot-admin.version>2.3.0</spring-boot-admin.version>
+        <mysql-connector.version>8.0.19</mysql-connector.version>
+        <mybatis-plus.version>3.4.0</mybatis-plus.version>
+        <druid.starter.version>1.1.21</druid.starter.version>
+        <swagger.version>3.0.0</swagger.version>
+        <hutool.version>5.3.9</hutool.version>
+        <fastDFS.version>1.27.2</fastDFS.version>
+        <fastJson.version>1.2.73</fastJson.version>
+    </properties>
+
+    <!--  spring-cloud H版本  mybatisPlus  mysql  druid   fastdfs   fastJson  hutool   swaggerUI  admin版本  lombok  -->
+    <!--    全局都需要的依赖-->
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastJson.version}</version>
+        </dependency>
+    </dependencies>
+
+    <!-- 依赖管理 先指定版本 后面需要用到的时候就不需要指定版本了-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-dependencies</artifactId>
+                <version>${spring-boot-admin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--  引入druid starter-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.tobato</groupId>
+                <artifactId>fastdfs-client</artifactId>
+                <version>${fastDFS.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <!--   在pom里面 是不要打包的 缺省的打包方式  <build></build>-->
 
 
 </project>
