--- a/shop-Server/cloud-iaas/pom.xml
+++ b/shop-Server/cloud-iaas/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>eureka-server</module>
         <module>config-server</module>
+        <module>gateway</module>
+        <module>admin-server</module>
     </modules>
 
 
