--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>cloud-iaas</module>
+        <module>shop-common</module>
     </modules>
 
     <parent>
