--- a/shop-Server/cloud-iaas/pom.xml
+++ b/shop-Server/cloud-iaas/pom.xml
@@ -16,6 +16,7 @@
         <module>config-server</module>
         <module>gateway</module>
         <module>admin-server</module>
+        <module>auth-server</module>
     </modules>
 
 
