--- a/shop-Server/cloud-iaas/auth-server/pom.xml
+++ b/shop-Server/cloud-iaas/auth-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>cloud-iaas</artifactId>
         <groupId>com.gohb</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <description>授权中心</description>
