--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -7,6 +7,7 @@
         <module>cloud-iaas</module>
         <module>shop-common</module>
         <module>shop-manager</module>
+        <module>shop-product</module>
     </modules>
 
     <parent>
@@ -19,7 +20,7 @@
     <packaging>pom</packaging>
     <groupId>com.gohb</groupId>
     <artifactId>shopServer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
 
     <!-- 版本控制 依赖管理 公共的依赖可以放在最外面这个父项目里面 -->
