--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -8,6 +8,7 @@
         <module>shop-common</module>
         <module>shop-manager</module>
         <module>shop-product</module>
+        <module>shop-store</module>
     </modules>
 
     <parent>
