search-service搜索模块实现，修复微信小程序端 数据加载问题

--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -9,6 +9,7 @@
         <module>shop-manager</module>
         <module>shop-product</module>
         <module>shop-store</module>
+        <module>shop-search</module>
     </modules>
 
     <parent>
