member-service 微信小程序端用户模块开发，后台 新增会员管理信息模块，前台（微信小程序端）实现用户收藏，收货地址等功能

--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -10,6 +10,7 @@
         <module>shop-product</module>
         <module>shop-store</module>
         <module>shop-search</module>
+        <module>shop-member</module>
     </modules>
 
     <parent>
