message-service 消息模块，支付宝短信服务推送, 微信小程序端 利用短信验证码方式，绑定手机号

--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -11,6 +11,7 @@
         <module>shop-store</module>
         <module>shop-search</module>
         <module>shop-member</module>
+        <module>shop-message</module>
     </modules>
 
     <parent>
