--- a/shop-Server/shop-message/message-api/pom.xml
+++ b/shop-Server/shop-message/message-api/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>shop-member</artifactId>
+        <artifactId>shop-message</artifactId>
         <groupId>com.gohb</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>member-api</artifactId>
+    <artifactId>message-api</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,20 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>com.gohb</groupId>
-            <artifactId>message-api</artifactId>
+            <artifactId>shop-common</artifactId>
             <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.gohb</groupId>
-            <artifactId>product-api</artifactId>
-            <version>1.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
