--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -12,6 +12,7 @@
         <module>shop-search</module>
         <module>shop-member</module>
         <module>shop-message</module>
+        <module>shop-cart</module>
     </modules>
 
     <parent>
