order-service,订单模块，实体类 依赖信息

--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -13,6 +13,7 @@
         <module>shop-member</module>
         <module>shop-message</module>
         <module>shop-cart</module>
+        <module>shop-order</module>
     </modules>
 
     <parent>
