--- a/shop-Server/pom.xml
+++ b/shop-Server/pom.xml
@@ -14,6 +14,7 @@
         <module>shop-message</module>
         <module>shop-cart</module>
         <module>shop-order</module>
+        <module>shop-pay</module>
     </modules>
 
     <parent>
